# rag-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: collaboration-learning.mdc  plan-sync.mdc
app/: config.py  llm.py  schemas.py
app/rag/: bm25_index.py  context.py  embeddings.py  graph.py  loader.py  rag.py  retriever.py  store.py
docs/: CODEGRAPH.md  M2-steps.md  M3-steps.md  M4-steps.md  M5-steps.md  PLAN.md  SCENARIO.md  qa-m1.md  qa-m2.md  qa-m3.md  qa-m4.md  qa-scenario-guide.md
docs/superpowers/specs/: 2026-07-16-m3.4-frontend-sse-design.md
eval/: BASELINE.md  questions.json  run_eval.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: chat.ts  chatStream.ts  documents.ts  health.ts
frontend/src/components/: ChatPanel.css  ChatPanel.tsx  UploadPanel.css  UploadPanel.tsx
scripts/: dev-frontend.ps1  dev.ps1  import_docs.py
