[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
