[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]
